[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fox/fox1.png" type="Texture" id=1]
[ext_resource path="res://assets/fox/fox2.png" type="Texture" id=2]
[ext_resource path="res://assets/fox/fox3.png" type="Texture" id=3]
[ext_resource path="res://assets/fox/fox4.png" type="Texture" id=4]
[ext_resource path="res://assets/fox/fox7.png" type="Texture" id=5]
[ext_resource path="res://assets/fox/fox6.png" type="Texture" id=6]
[ext_resource path="res://assets/fox/fox5.png" type="Texture" id=7]
[ext_resource path="res://assets/fox/fox8.png" type="Texture" id=8]
[ext_resource path="res://Karakter/Fox.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "fox",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.5, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 1.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 19, 5 )

[sub_resource type="Animation" id=5]
resource_name = "menghilang"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Fox" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 23
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fox"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 14 )
shape = SubResource( 2 )

[node name="Pivot" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Pivot"]
position = Vector2( 19, 4 )
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 2

[node name="DeteksiAtas" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeteksiAtas"]
position = Vector2( -1, 3 )
shape = SubResource( 6 )

[node name="DeteksiSamping" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeteksiSamping"]
position = Vector2( -1, 12 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/menghilang = SubResource( 5 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="DeteksiAtas" to="." method="_on_DeteksiAtas_body_entered"]
[connection signal="area_entered" from="DeteksiSamping" to="." method="_on_DeteksiSamping_area_entered"]
[connection signal="body_entered" from="DeteksiSamping" to="." method="_on_DeteksiSamping_body_entered"]
